deprecated-workshops/Workshop-4-ingress-on-minikube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # backend:
  #   serviceName: default-http-backend
  #   servicePort: 80
  rules:
  - host: nginx.yogiman.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
